# qa_observability

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: build_embeddings_dag.py  ingest_documents_dag.py  llmops_pretraining_gate.py  quality_gate_dag.py  run_eval_suite_dag.py  run_gx_dq_checks_dag.py
config/: quality_thresholds.yaml
dashboards/alerts/: dq_rules.yml
dashboards/prometheus/: prometheus.yml
datasets/samples/: annotation_bias_balanced_v1.jsonl  annotation_eval_consensus_v1.jsonl  rag_dataset_contract.yaml  rag_documents_extended_v2.jsonl  rag_documents_recent_v2.jsonl
datasets/synthetic/: annotation_bias_skewed_v1.jsonl  annotation_eval_disagreement_v1.jsonl  rag_documents_dirty_v1.jsonl  rag_documents_stale_v1.jsonl  validation_matrix.yaml
db/migrations/: env.py
docker/: airflow.Dockerfile  api.Dockerfile
docs/architecture/: final_architecture_summary.md
docs/data_statements/: annotation_eval_statement.md
docs/datasheets/: rag_demo_datasheet.md
docs/runbooks/: airflow_smoke.md  final_demo_ui.md  guide_definition_of_done_matrix.md  mvp_readiness.md
eval/: eval_items.csv
ge/checkpoints/: rag_documents_dirty_data_checkpoint.yaml
ge/data_docs/: gx_runtime_report.json  index.html
ge/expectations/: rag_documents_dirty_data_suite.json  rag_runtime_tables_suite.json
scripts/: airflow_api_smoke.py  bootstrap_milvus.py  build_index.py  e2e_validation_smoke.py  ingest_documents.py  llmops_gate_check.py  quality_gate.py  readiness_gate.py  run_eval.py  run_gx_dq_checks.py
(+75 files in other folders)
